# djl

./: .gitignore  CNAME  CONTRIBUTING.md  README.md  apt.txt  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  groups  index.html  index1.0.html  leaders.md  mkdocs.yml  postBuild  project.config  readthedocs.yml  settings.gradle  settings.gradle.kts  versions.json
dlr/dlr-native/: CMakeLists.txt  README.md  build.gradle  build.sh
dlr/dlr-native/src/main/native/: ai_djl_dlr_jni_DlrLibrary.cc
engines/dlr/dlr-native/: .gitignore  CMakeLists.txt  README.md  build.gradle  build.sh
engines/llama/: .gitignore  CMakeLists.txt  build-args.cmake  build.cmd  build.gradle  build.gradle.kts  build.sh
engines/llama/src/main/javadoc/: overview.html
engines/llama/src/main/native/: ai_djl_llama.cpp
engines/llama/src/test/resources/: inputs.json
engines/tensorrt/: .gitignore  CMakeLists.txt  README.md  build.gradle  build.gradle.kts  build.sh
engines/tensorrt/src/main/javadoc/: overview.html
engines/tensorrt/src/main/native/: ai_djl_tensorrt_jni_TrtLibrary.cc  ai_djl_tensorrt_jni_cache.cc  ai_djl_tensorrt_jni_cache.h  ai_djl_tensorrt_jni_common.h  ai_djl_tensorrt_jni_exception.h  ai_djl_tensorrt_jni_log.cc  ai_djl_tensorrt_jni_log.h  ai_djl_tensorrt_jni_model.cc  ai_djl_tensorrt_jni_model.h
engines/tensorrt/src/main/resources/: tensorrt.properties
engines/tensorrt/src/test/resources/: identity.trt  identity_70.trt  identity_75.trt
extensions/fasttext/: .gitignore  CMakeLists.txt  README.md  build.gradle  build.gradle.kts  build.sh
extensions/fasttext/src/main/native/: ai_djl_fasttext_jni_FastTextLibrary.cc
extensions/sentencepiece/: .gitignore  CMakeLists.txt  README.md  build.cmd  build.gradle  build.gradle.kts  build.sh
extensions/sentencepiece/native/: .gitignore  CMakeLists.txt  build.gradle  build.sh
extensions/sentencepiece/native/src/: ai_djl_sentencepiece_jni_SentencePieceLibrary.cc
extensions/sentencepiece/src/main/javadoc/: overview.html
extensions/sentencepiece/src/main/native/: ai_djl_sentencepiece_jni_SentencePieceLibrary.cc
extensions/spark/setup/: PyPiDescription.rst  pyproject.toml  setup.py
extensions/spark/setup/djl_spark/: __init__.py  transformer.py  translator.py
extensions/spark/setup/djl_spark/util/: dependency_util.py  files_util.py
extensions/tokenizers/rust/: Cargo.toml
extensions/tokenizers/rust/src/: build.rs  compute_cap.rs  lib.rs  utils.rs
extensions/tokenizers/rust/src/layers/: cublaslt.rs  layer_norm.rs  linear.rs  mod.rs  rms_norm.rs
extensions/tokenizers/rust/src/models/: bert.rs  camembert.rs  distilbert.rs  gemma2.rs  gte.rs  mistral.rs  mod.rs  qwen2.rs  roberta.rs  xlm_roberta.rs
extensions/tokenizers/rust/src/ndarray/: binary.rs  cmp.rs  creation.rs  mod.rs  nn.rs  other.rs  reduce.rs  unary.rs
extensions/tokenizers/src/main/python/: .gitignore  README.md  arg_parser.py  fill_mask_converter.py  huggingface_converter.py  huggingface_models.py  metadata.py  model_zoo_importer.py  pyproject.toml  question_answering_converter.py  requirements.txt  safetensors_convert.py  sentence_similarity_converter.py  setup.py  shasum.py  text_classification_converter.py  token_classification_converter.py  zip_utils.py
paddlepaddle/paddlepaddle-native/: .gitignore  CMakeLists.txt  README.md  build.cmd  build.gradle  build.sh
paddlepaddle/paddlepaddle-native/src/main/native/: ai_djl_paddlepaddle_jni_PaddleLibrary_inference.cc  ai_djl_paddlepaddle_jni_PaddleLibrary_tensor.cc  djl_paddle_jni_utils.h  djl_paddle_utils.h
pytorch/native/: CMakeLists.txt  README.md  build.sh
pytorch/native/src /: ai_djl_pytorch_jni_PyTorchLibrary.cc  ai_djl_pytorch_jni_PyTorchLibrary_functional.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_comparison.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_core.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_creation.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_isjm.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_pointwise.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_reduction.cc  djl_pytorch_jni_utils.h
pytorch/pytorch-engine/c_api/: CMakeLists.txt  README.md  c_api.cc  c_api.h  torch-wrapper.cpp
pytorch/pytorch-native/: .gitignore  CMakeLists.txt  README.md  build.cmd  build.gradle  build.sh  build_android.sh
pytorch/pytorch-native/src/: ai_djl_pytorch_jni_PyTorchLibrary_functional.cc  ai_djl_pytorch_jni_PyTorchLibrary_inference.cc  ai_djl_pytorch_jni_PyTorchLibrary_nn_functional.cc  ai_djl_pytorch_jni_PyTorchLibrary_optim.cc  ai_djl_pytorch_jni_PyTorchLibrary_system.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor_pointwise.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_comparison.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_creation.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_isjm.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_nn.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_other.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_pointwise.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_random_sampling.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_reduction.cc  ai_djl_pytorch_jni_PyTorchLibrary_training.cc  djl_pytorch_jni_error.h  djl_pytorch_jni_exception.h  djl_pytorch_jni_loader.cc  djl_pytorch_jni_log.cc  djl_pytorch_jni_log.h  djl_pytorch_jni_utils.h
pytorch/pytorch-native/src/main/native/: ai_djl_pytorch_jni_PyTorchLibrary_inference.cc  ai_djl_pytorch_jni_PyTorchLibrary_ivalue.cc  ai_djl_pytorch_jni_PyTorchLibrary_nn_functional.cc  ai_djl_pytorch_jni_PyTorchLibrary_optim.cc  ai_djl_pytorch_jni_PyTorchLibrary_system.cc  ai_djl_pytorch_jni_PyTorchLibrary_tensor.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_comparison.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_creation.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_isjm.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_other.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_pointwise.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_random_sampling.cc  ai_djl_pytorch_jni_PyTorchLibrary_torch_reduction.cc  ai_djl_pytorch_jni_cache.cc  ai_djl_pytorch_jni_cache.h  djl_pytorch_jni_exception.h  djl_pytorch_jni_log.cc  djl_pytorch_utils.h  (+2 more)
(+4720 files in other folders)
