[package]
name = "djl_tokenizer"
version = "0.1.0"
authors = ["Frank Liu <frankfliu2000@gmail.com>"]
edition = "2021"

[dependencies]
jni = "0.21.1"
candle = { version = "*", package = "candle-core" }
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
candle-flash-attn = { version = "0.8.4", optional = true }
candle-cublaslt = { git = "https://github.com/huggingface/candle-cublaslt", rev = "cf789b7dd6d4abb19b03b9556442f94f0588b4a0", optional = true }
candle-layer-norm = { git = "https://github.com/xyang16/candle-layer-norm", rev = "e574de6a7f88bafbede8edf9ee43170c6a8ce51a", optional = true }
candle-rotary = { git = "https://github.com/huggingface/candle-rotary", rev = "0a718a0856569a92f3112e64f10d07e4447822e8", optional = true }
tokenizers = "0.21.1"
half = "2.5.0"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"

[patch.crates-io]
cudarc = { git = "https://github.com/coreylowman/cudarc", rev = "c388e724af93a3e8fbe484f5ded2d8b3c1badd8e" }
candle = { git = "https://github.com/huggingface/candle", rev = "468d1d525fe206a35d6962c02cfa7b9918b31076", package = "candle-core" }
# openssl-src 300.3.2 is broken for AL2
openssl-src = { git = "https://github.com/alexcrichton/openssl-src-rs", rev = "c591de676017446c9f1d719e77eb162159ce8886", package = "openssl-src" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tokenizers = { version = "0.21.0", features = ["http"] }

[lib]
crate-type = ["cdylib"]

[features]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:candle-cublaslt", "dep:candle-layer-norm", "dep:candle-rotary"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
